# cororos2

./: .pre-commit-config.yaml  README.md
.github/workflows/: pre-commit.yml
allie_pwm_driver/: CMakeLists.txt  package.xml
allie_pwm_driver/src/: allie_pwm_driver.cpp
cororos2_allie_bringup/: CMakeLists.txt  package.xml
cororos2_allie_bringup/config/: allie_controllers.yaml
cororos2_allie_bringup/launch/: allie.launch.xml  allie_gz.launch.py  test_diff_drive_controller.launch.xml  test_forward_position_controller.launch.xml  test_joint_trajectory_controller.launch.xml
cororos2_allie_bringup/src/: sim_sensor_frame_republisher.cpp
cororos2_allie_bringup/worlds/: allie_floor.sdf
cororos2_allie_description/: CMakeLists.txt  README.md  package.xml
cororos2_allie_description/launch/: view_allie.launch.xml
cororos2_allie_description/rviz/: allie.rviz
cororos2_bringup/: CMakeLists.txt  package.xml
cororos2_bringup/config/: allie_controllers.yaml  allie_controllers_raw_odom.yaml  allie_gz_controllers.yaml  cornelius_controllers.yaml  cornelius_controllers_raw_odom.yaml  cornelius_encoder_controllers.yaml  cornelius_encoder_controllers_raw_odom.yaml  cororos_ekf_hw.yaml  joe_controllers.yaml  joe_controllers_raw_odom.yaml  joe_ublox.yaml  memsense.yaml  odrive.yaml  pwm.yaml  realsense.yaml  roboclaw.yaml  ublox.yaml  velodyne_driver.yaml  velodyne_transform.yaml
cororos2_bringup/config/controllers/: allie_controllers.yaml  allie_controllers_raw_odom.yaml  cornelius_encoder_controllers.yaml  joe_controllers.yaml  joe_mock_controllers.yaml
cororos2_bringup/config/drive_backends/: odrive.yaml  roboclaw.yaml
cororos2_bringup/config/ekf/: cororos_ekf.yaml  cororos_ekf_hw.yaml  cororos_ekf_sim.yaml
cororos2_bringup/config/sensors/: imu_filter_madgwick.yaml  ublox.yaml  velodyne_driver.yaml  velodyne_transform.yaml
cororos2_bringup/launch/: cororos2_bringup.launch.xml  cororos2_fused_odometry.launch.xml  cororos2_hw.launch.xml  cororos2_localization.launch.xml  cororos2_offline.launch.xml  cororos2_sensors.launch.xml  robot_gz.launch.py  robot_gz.launch.xml
cororos2_bringup/src/: sim_sensor_frame_republisher.cpp
cororos2_bringup/worlds/: environment.sdf  floor.sdf
cororos2_cornelius_bringup/: CMakeLists.txt  package.xml
cororos2_cornelius_description/: CMakeLists.txt  README.md  package.xml
cororos2_description/: CMakeLists.txt  package.xml
cororos2_description/launch/: view_robot.launch.py  view_robot.launch.xml
cororos2_description/meshes/cornelius/collision/: hd2_marble_base_body_collision.stl
cororos2_description/meshes/cornelius/visual/: realsense_d435.dae
cororos2_description/rviz/: allie.rviz  cornelius.rviz  cororos2.rviz  joe.rviz
cororos2_description/sdf/allie/: model.config  model.sdf
cororos2_description/sdf/cornelius/: model.config  model.sdf
cororos2_description/sdf/joe/: model.config  model.sdf
cororos2_description/test/: allie_test_urdf_xacro.py  cornelius_test_urdf_xacro.py  joe_test_urdf_xacro.py
cororos2_description/urdf/: allie.urdf.xacro  cornelius.urdf.xacro  joe.urdf.xacro
cororos2_description/urdf/allie/: allie_macro.ros2_control.xacro  allie_macro.xacro
cororos2_description/urdf/cornelius/: cornelius_macro.ros2_control.xacro  cornelius_macro.xacro
cororos2_description/urdf/joe/: joe_macro.ros2_control.xacro  joe_macro.xacro
cororos2_joe_bringup/: CMakeLists.txt  package.xml
cororos2_joe_bringup/config/: joe_controllers.yaml  joe_gz_controllers.yaml
cororos2_joe_bringup/launch/: joe.launch.xml  joe_gz.launch.py  test_diff_drive_controller.launch.xml  test_forward_position_controller.launch.xml  test_joint_trajectory_controller.launch.xml
cororos2_joe_bringup/src/: sim_sensor_frame_republisher.cpp
cororos2_joe_description/: CMakeLists.txt  README.md  package.xml
cororos2_joe_description/launch/: view_joe.launch.xml
cororos2_joe_description/rviz/: joe.rviz
cororos2_joe_description/sdf/: model.sdf
cororos2_joe_description/test/: joe_test_urdf_xacro.py
cororos2_joe_description/urdf/: joe.urdf.xacro
cororos2_joe_description/urdf/joe/: joe_macro.ros2_control.xacro  joe_macro.xacro
cororos2_navigation/: README.md  package.xml  setup.cfg  setup.py
cororos2_navigation/config/: allie_nav2.yaml  cornelius_amcl.yaml  cornelius_nav2.yaml  cororos_cartographer_ls.lua  cororos_slam.yaml  cororos_slam_lifelong.yaml  joe_amcl.yaml  joe_nav2.yaml  joystick_teleop.yaml  teleop_twist_joy_logitech_f710_diff_drive.config.yaml  twist_mux.yaml
cororos2_navigation/cororos2_navigation/: __init__.py  cmd_vel_stamper.py  scan_republisher.py
cororos2_navigation/launch/: cororos2_nav2_amcl.launch.xml  cororos2_nav2_cartographer.launch.xml  cororos2_nav2_slam.launch.xml  cororos2_teleop_mux.launch.xml
cororos2_navigation/maps/: map_joe.pgm  map_joe.yaml  placeholder_map.pgm  placeholder_map.yaml
cororos2_navigation/resource/: cororos2_navigation
memsense_msimu3025_driver/: CMakeLists.txt  package.xml
memsense_msimu3025_driver/src/: msimu3025_driver.cpp
odrive_hardware_interface/: CMakeLists.txt  odrive_hardware_interface.xml  package.xml
odrive_hardware_interface/include/odrive_hardware_interface/: odrive_hardware_interface.hpp
odrive_hardware_interface/python/: odrive_backend.py
odrive_hardware_interface/src/: odrive_hardware_interface.cpp
pwm_hardware_interface/: CMakeLists.txt  package.xml  pwm_hardware_interface.xml
pwm_hardware_interface/include/pwm_hardware_interface/: pwm_hardware_interface.hpp
pwm_hardware_interface/src/: pwm_hardware_interface.cpp
roboclaw_driver/: package.xml  setup.py
roboclaw_driver/roboclaw_driver/: roboclaw_common.py  roboclaw_encoder_node.py  roboclaw_no_encoder_node.py
roboclaw_hardware_interface/: CMakeLists.txt  package.xml  roboclaw_hardware_interface.xml
roboclaw_hardware_interface/include/roboclaw_hardware_interface/: roboclaw_hardware_interface.hpp  roboclaw_protocol.hpp
roboclaw_hardware_interface/python/: roboclaw_backend.py  roboclaw_protocol.py
roboclaw_hardware_interface/src/: roboclaw_hardware_interface.cpp  roboclaw_protocol.cpp
(+48 files in other folders)
