<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>allie_pwm_driver</name>
  <version>0.0.0</version>
  <description>ROS 2 PWM command conversion driver for the Allie base.</description>
  <maintainer email="gabriela.vitez@b-robotized.com">Gabriela Vitez</maintainer>
  <license>Copyright (c) 2026, Proprietary License - b-robotized Group</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
