<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pwm_hardware_interface</name>
  <version>0.0.0</version>
  <description>ROS 2 PWM hardware interface for the Allie base.</description>
  <maintainer email="gabriela.vitez@b-robotized.com">Gabriela Vitez</maintainer>
  <license>Copyright (c) 2026, Proprietary License - b-robotized Group</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
