<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboclaw_driver</name>
  <version>0.0.0</version>
  <description>ROS 2 driver package for Roboclaw motor controllers.</description>
  <maintainer email="gabriela.vitez@b-robotized.com">Gabriela Vitez</maintainer>
  <license>Copyright (c) 2026, Proprietary License - b-robotized Group</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
