<?xml version="1.0"?>
<package format="3">
  <name>roboclaw_hardware_interface</name>
  <version>0.0.1</version>
  <description>ROS 2 control hardware interface for Roboclaw-backed cororos2 robots.</description>
  <maintainer email="gabriela.vitez@b-robotized.com">Gabriela Vitez</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>roboclaw_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
